--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ li {
     display: none;
     width: 100%;
     min-height: 100%; /* allow for content off the bottom of the page */
-    position: fixed;  /* or absolute if the user needs to scroll for more content */
+    position: absolute;  /* or absolute if the user needs to scroll for more content */
     padding: 1rem 2rem;
 }
 .active{
